--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Configure Git
+        run: |
+          git config --global url."https://oauth2:${{ secrets.GITLAB_TOKEN }}@gitlab.inesctec.pt/".insteadOf "https://gitlab.inesctec.pt/"
+
+
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
@@ -39,6 +44,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: Configure Git
+      run: |
+        git config --global url."https://oauth2:${{ secrets.GITLAB_TOKEN }}@gitlab.inesctec.pt/".insteadOf "https://gitlab.inesctec.pt/"
 
     - name: Install dependencies
       run: |
