--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,10 @@ jobs:
   lint:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        python-version: ["3.12"]
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -22,8 +26,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
-          pip install flake8
+          python -m pip install --upgrade pip
+          pip install poetry
+          poetry install --with test
 
       - name: Lint code
         run: |
@@ -34,7 +39,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.10", "3.11", "3.12"]
+        python-version: ["3.12"]
 
     steps:
     - name: Checkout code
@@ -56,5 +61,8 @@ jobs:
 
     - name: Run tests with coverage
       run: |
+        python -m pip install --upgrade pip
+        pip install poetry
+        poetry install --with test
         cd src/market
         pytest --cov
