--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,14 @@ name: CI
 
 on: [push]
 
+env:
+  PYTHON_VERSION: "3.12"
+  POETRY_NO_INTERACTION: 1
+  POETRY_VIRTUALENVS_CREATE: 'false'
+  POETRY_CACHE_DIR: '/var/cache/pypoetry'
+  POETRY_HOME: '/usr/local'
+
+
 jobs:
   lint:
     runs-on: ubuntu-latest
