--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,6 @@ env:
   POETRY_CACHE_DIR: '/var/cache/pypoetry'
   POETRY_HOME: '/usr/local'
 
-
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -31,7 +30,6 @@ jobs:
         run: |
           git config --global url."https://oauth2:${{ secrets.GITLAB_TOKEN }}@gitlab.inesctec.pt/".insteadOf "https://gitlab.inesctec.pt/"
 
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -40,7 +38,7 @@ jobs:
 
       - name: Lint code
         run: |
-          flake8
+          flake8 .
 
   test:
     runs-on: ubuntu-latest
@@ -64,13 +62,11 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install -r requirements.txt
-        pip install pytest pytest-cov
-
-    - name: Run tests with coverage
-      run: |
         python -m pip install --upgrade pip
         pip install poetry
         poetry install --with test
+
+    - name: Run tests with coverage
+      run: |
         cd src/market
         pytest --cov
